--- a/host_vars/nac-fabric1/topology_switches.nac.yaml
+++ b/host_vars/nac-fabric1/topology_switches.nac.yaml
@@ -3,50 +3,34 @@ vxlan:
   topology:
     switches:
       - name: netascode-spine1
-        serial_number: 99H2TUPCVFK
+        serial_number: 9THX258OHVK
         role: spine
         management:
-          default_gateway_v4: 10.1.1.1
-          management_ipv4_address: 10.1.1.21
-        routing_loopback_id: 0
-        vtep_loopback_id: 1
-      - name: netascode-spine2
-        serial_number: 941L30Q8ZYI
-        role: spine
-        management:
-          default_gateway_v4: 10.1.1.1
-          management_ipv4_address: 10.1.1.22
+          default_gateway_v4: 198.18.128.1
+          management_ipv4_address: 198.18.133.201
         routing_loopback_id: 0
         vtep_loopback_id: 1
       - name: netascode-leaf1
-        serial_number: 9LWGEUPJOCM
+        serial_number: 90FIJ99RAD7
         role: leaf
         management:
-          default_gateway_v4: 10.1.1.1
-          management_ipv4_address: 10.1.1.11
+          default_gateway_v4: 198.18.128.1
+          management_ipv4_address: 198.18.133.202
         routing_loopback_id: 0
         vtep_loopback_id: 1
-      - name: netascode-leaf2
-        serial_number: 9YEXD0OHA7Z
+      - name: netascode-border-leaf1
+        serial_number: 95V91M9EDNI
         role: leaf
         management:
-          default_gateway_v4: 10.1.1.1
-          management_ipv4_address: 10.1.1.12
+          default_gateway_v4: 198.18.128.1
+          management_ipv4_address: 198.18.133.203
         routing_loopback_id: 0
         vtep_loopback_id: 1
-      - name: netascode-leaf3
-        serial_number: 9M2TXMZ7D3N
+      - name: netascode-border-leaf2
+        serial_number: 92OM1YBTCNP
         role: leaf
         management:
-          default_gateway_v4: 10.1.1.1
-          management_ipv4_address: 10.1.1.13
-        routing_loopback_id: 0
-        vtep_loopback_id: 1
-      - name: netascode-leaf4
-        serial_number: 982YGMKUY2B
-        role: leaf
-        management:
-          default_gateway_v4: 10.1.1.1
-          management_ipv4_address: 10.1.1.14
+          default_gateway_v4: 198.18.128.1
+          management_ipv4_address: 198.18.133.204
         routing_loopback_id: 0
         vtep_loopback_id: 1
