--- a/host_vars/nac-fabric1-orig/vrfs.nac.yaml
+++ b/host_vars/nac-fabric1-orig/vrfs.nac.yaml
@@ -5,20 +5,24 @@ vxlan:
       - name: NaC-VRF01
         vrf_id: 150001
         vlan_id: 2001
-        vrf_attach_group: vrf1_attach_group
+        vrf_attach_group: all
       - name: NaC-VRF02
         vrf_id: 150002
         vlan_id: 2002
-        vrf_attach_group: vrf2_attach_group
+        vrf_attach_group: leaf1
+      - name: NaC-VRF03
+        vrf_id: 150003
+        vlan_id: 2003
+        vrf_attach_group: leaf2
     vrf_attach_groups:
-      - name: vrf1_attach_group
+      - name: all
         switches:
-          - { hostname: netascode-leaf1 }
           - { hostname: netascode-border-leaf1 }
+          - { hostname: netascode-border-leaf2 }
+      - name: leaf1
+        switches:
+          - { hostname: netascode-border-leaf1 }
+      - name: leaf2
+        switches:
           - { hostname: netascode-border-leaf2 }
 
-      - name: vrf2_attach_group
-        switches:
-          - { hostname: netascode-leaf1 }
-          - { hostname: netascode-border-leaf1 }
-          - { hostname: netascode-border-leaf2 }
