--- a/host_vars/nac-fabric1/networks.nac.yaml
+++ b/host_vars/nac-fabric1/networks.nac.yaml
@@ -9,13 +9,13 @@ vxlan:
         vlan_name: NaC-Net01_vlan2301
         gw_ip_address: "10.1.1.1/24" # Its overylay IP and should be internal
         network_attach_group: net1_attach_group
-      - name: NaC-Net02
-        vrf_name: NaC-VRF02
-        net_id: 130002
-        vlan_id: 2302
-        vlan_name: NaC-Net02_vlan2302
-        gw_ip_address: "10.2.1.1/24" # Its overylay IP and should be internal
-        network_attach_group: net2_attach_group
+      # - name: NaC-Net02
+      #   vrf_name: NaC-VRF02
+      #   net_id: 130002
+      #   vlan_id: 2302
+      #   vlan_name: NaC-Net02_vlan2302
+      #   gw_ip_address: "10.2.1.1/24" # Its overylay IP and should be internal
+      #   network_attach_group: net2_attach_group
       # - name: NaC-Net03
       #   vrf_name: NaC-VRF03
       #   net_id: 130003
@@ -33,9 +33,9 @@ vxlan:
         switches:
           - { hostname: netascode-leaf1, ports: ["ethernet1/2"] }
           - { hostname: netascode-border-leaf1, ports: [] }
-          - { hostname: netascode-border-leaf2, ports: [] }
+          # - { hostname: netascode-border-leaf2, ports: [] }
       - name: net2_attach_group
         switches:
           - { hostname: netascode-leaf1, ports: ["ethernet1/3"] }
           - { hostname: netascode-border-leaf1, ports: [] }
-          - { hostname: netascode-border-leaf2, ports: [] }
+          # - { hostname: netascode-border-leaf2, ports: [] }
