--- a/host_vars/nac-fabric1/global.nac.yaml
+++ b/host_vars/nac-fabric1/global.nac.yaml
@@ -4,7 +4,7 @@ vxlan:
     name: nac-fabric1
     type: VXLAN_EVPN
   global:
-    bgp_asn: "64555" # Also show 65001.100 - 4 byte ASN to support different sub ASNs
+    bgp_asn: "64555"
     route_reflectors: 2
     anycast_gateway_mac: 12:34:56:78:90:00
     dns_servers:
