--- a/host_vars/nac-fabric1/vrf-lite-ebgp.nac.yaml
+++ b/host_vars/nac-fabric1/vrf-lite-ebgp.nac.yaml
@@ -1,26 +1,26 @@
-# ---
-# vxlan:
-#   overlay_extensions:
-#     vrf_lites:
-#       - name: vrf-lite-vrf01
-#         vrf: NaC-VRF01
-#         switches:
-#           - name: netascode-border-leaf1
-#             bgp_peers:
-#               - address: 10.10.1.2
-#                 remote_as: 65099
-#                 description: BGP to dc-edge1
-#                 # password: 9125d59c18a9b015
-#                 address_family_ipv4_unicast:
-#                   send_community: true
-#                   send_ext_community: true
+---
+vxlan:
+  overlay_extensions:
+    vrf_lites:
+      - name: vrf-lite-vrf01
+        vrf: NaC-VRF01
+        switches:
+          - name: netascode-border-leaf1
+            bgp_peers:
+              - address: 10.10.1.2
+                remote_as: 65099
+                description: BGP to dc-edge1
+                # password: 9125d59c18a9b015
+                address_family_ipv4_unicast:
+                  send_community: true
+                  send_ext_community: true
 
-#           - name: netascode-border-leaf2
-#             bgp_peers:
-#               - address: 10.10.201.2
-#                 remote_as: 65099
-#                 description: BGP to dc-edge1
-#                 # password: 9125d59c18a9b015
-#                 address_family_ipv4_unicast:
-#                   send_community: true
-#                   send_ext_community: true
+          - name: netascode-border-leaf2
+            bgp_peers:
+              - address: 10.10.201.2
+                remote_as: 65099
+                description: BGP to dc-edge1
+                # password: 9125d59c18a9b015
+                address_family_ipv4_unicast:
+                  send_community: true
+                  send_ext_community: true
