--- a/host_vars/nac-fabric1/networks.nac.yaml
+++ b/host_vars/nac-fabric1/networks.nac.yaml
@@ -3,39 +3,28 @@ vxlan:
   overlay:
     networks:
       - name: NaC-Net01
-        vrf_name: NaC-VRF01
+        vrf_name: NaC-VRF10
         net_id: 130001
         vlan_id: 2301
         vlan_name: NaC-Net01_vlan2301
-        gw_ip_address: "10.1.1.1/24" # Its overylay IP and should be internal
+        gw_ip_address: "192.168.10.1/24" # Its overylay IP and should be internal
         network_attach_group: net1_attach_group
-      # - name: NaC-Net02
-      #   vrf_name: NaC-VRF02
-      #   net_id: 130002
-      #   vlan_id: 2302
-      #   vlan_name: NaC-Net02_vlan2302
-      #   gw_ip_address: "10.2.1.1/24" # Its overylay IP and should be internal
-      #   network_attach_group: net2_attach_group
-      # - name: NaC-Net03
-      #   vrf_name: NaC-VRF03
-      #   net_id: 130003
-      #   vlan_id: 2303
-      #   vlan_name: NaC-Net03_vlan2303
-      #   gw_ip_address: "192.168.12.3/24"
-      #   gw_ipv6_address: "2001::1/64"
-      #   route_target_both: True
-      #   l3gw_on_border: True
-      #   mtu_l3intf: 7600
-      #   int_desc: "Configured by NetAsCode"
-      #   network_attach_group: leaf2
+      - name: NaC-Net02
+        vrf_name: NaC-VRF11
+        net_id: 130002
+        vlan_id: 2302
+        vlan_name: NaC-Net02_vlan2302
+        gw_ip_address: "172.16.11.1/24" # Its overylay IP and should be internal
+        network_attach_group: net2_attach_group
+
     network_attach_groups:
       - name: net1_attach_group
         switches:
           - { hostname: netascode-leaf1, ports: ["ethernet1/2"] }
           - { hostname: netascode-border-leaf1, ports: [] }
-          # - { hostname: netascode-border-leaf2, ports: [] }
+          - { hostname: netascode-border-leaf2, ports: [] }
       - name: net2_attach_group
         switches:
           - { hostname: netascode-leaf1, ports: ["ethernet1/3"] }
           - { hostname: netascode-border-leaf1, ports: [] }
-          # - { hostname: netascode-border-leaf2, ports: [] }
+          - { hostname: netascode-border-leaf2, ports: [] }
