vxlan hostvars final update

--- a/host_vars/nac-fabric1/topology_switches.nac.yaml
+++ b/host_vars/nac-fabric1/topology_switches.nac.yaml
@@ -8,8 +8,6 @@ vxlan:
         management:
           default_gateway_v4: 198.18.128.1
           management_ipv4_address: 198.18.133.201
-        # routing_loopback_id: 0
-        # vtep_loopback_id: 1
 
       - name: netascode-leaf1
         serial_number: 90U83L2BNXD
@@ -36,13 +34,13 @@ vxlan:
         routing_loopback_id: 0
         vtep_loopback_id: 1
         interfaces:
-          - name: Ethernet1/2 # only to test the configuration
+          - name: Ethernet1/2
             mode: routed
             ipv4_address: 10.10.1.10/24
             vrf: NaC-VRF10
             ipv4_route_tag: 12345
             mtu: 1500
-          - name: Ethernet1/3 # only to test the configuration
+          - name: Ethernet1/3
             mode: routed
             ipv4_address: 10.10.2.10/24
             vrf: NaC-VRF10
@@ -58,13 +56,13 @@ vxlan:
         routing_loopback_id: 0
         vtep_loopback_id: 1
         interfaces:
-          - name: Ethernet1/2 # only to test the configuration
+          - name: Ethernet1/2
             mode: routed
             ipv4_address: 10.10.201.10/24
             vrf: NaC-VRF11
             ipv4_route_tag: 12345
             mtu: 1500
-          - name: Ethernet1/3 # only to test the configuration
+          - name: Ethernet1/3
             mode: routed
             ipv4_address: 10.10.202.10/24
             vrf: NaC-VRF11
